--- a/IVAO_CG/forms/StartForm.resx
+++ b/IVAO_CG/forms/StartForm.resx
@@ -117,4 +117,45 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="menuStrip2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="button1.Tag" xml:space="preserve">
+    <value>  static void DatabaseConnection()
+        {
+          
+            string myConnectionString;
+
+            myConnectionString = "server=server.roegl.eu;uid=ivao;" +
+                "pwd=ivao_cg;database=ivao_cg;";
+
+           
+                    
+            try
+            {
+                MySqlConnection connection = new MySqlConnection(myConnectionString);
+                MySqlCommand command = connection.CreateCommand();
+                command.CommandText = "SELECT * FROM SID_LOVV WHERE AP = 'LOWW'";
+                MySqlDataReader Reader;
+                connection.Open();
+                Reader = command.ExecuteReader();
+                while (Reader.Read())
+                {
+                    string row = "";
+                    for (int i = 0; i &lt; Reader.FieldCount; i++)
+                        row += Reader.GetValue(i).ToString() + ", ";
+                    Console.WriteLine(row);
+                }
+                connection.Close();
+            }
+            catch (MySql.Data.MySqlClient.MySqlException ex)
+            {
+                MessageBox.Show(ex.Message);
+                
+            }
+        }</value>
+  </data>
+  <metadata name="backgroundWorker1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>132, 17</value>
+  </metadata>
 </root>
